# nightingale

./: Cargo.toml  LICENSE  README.md  build_app.sh  build_icon.sh  build_linux.sh
assets/: icon.icns
src/: macos_share.rs  main.rs  wifi_share.rs
