[package]
name = "nightingale"
version = "0.1.1"
edition = "2021"
authors = ["Eric Hamiter <ehamiter@gmail.com>"]
description = "A desktop application for searching YouTube videos and downloading them as MP3 files"
repository = "https://github.com/ehamiter/nightingale"
license = "MIT"
keywords = ["youtube", "mp3", "downloader", "audio", "gui"]
categories = ["multimedia::audio", "gui"]
readme = "README.md"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "image"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tokio-stream = "0.1"
image = "0.24"
yt-dlp = "1.3.4"
dirs = "5.0"
open = "5.0"
rfd = "0.15"
rodio = "0.19"
tiny_http = "0.12"
qrcode = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
objc-foundation = "0.1"
